--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" [rootParams]="params" tabTitle="Expenses" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" [rootParams]="params" tabTitle="Categories" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
