added debug option

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" [rootParams]="params" tabTitle="Expenses" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" [rootParams]="params" tabTitle="Categories" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab2Root" [rootParams]="params" tabTitle="Categories" tabIcon="book"></ion-tab>
+  <ion-tab [root]="tab3Root" [rootParams]="params" tabTitle="Debug" tabIcon="build"></ion-tab>
 </ion-tabs>
